Pretty much working (at least almost)

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,15 +1,148 @@
 tablist:
   update-ticks: 100
+  columns: 4
+header: '&b&lStrikeTab &7&l- &3&lTablist Addon'
+footer: '&7Contact Toppe#4670 for StrikeTab'
+# Used to sort players in tab
+sort-ranks:
+  admin:
+    permission: 'strikepractice.admin'
+    prefix: '&c'
+  staff:
+    permission: 'strikepractice.staff'
+    prefix: '&d'
+  donator:
+    permission: 'strikepractice.donator'
+    prefix: '&e'
 
 slots:
   # You can use "ping=<number>" e.g "ping=10" to set the ping
   # Use "skin=<skin>" e.g "skin=Toppe5" to set the skin (currently not really working)
   default:
-    - 'Test skin=Toppe5'
-    - 'Test2 skin=steve'
+    column-1:
+      - ' '
+      - '&7Online: &f%strikepractice_players%'
+      - '&7Staff Online: &f%strikepractice_online_staff%'
+      - ' '
+      - ' '
+      - '&6Global Elo: &7%strikepractice_global_elo%'
+      - '&6NoDebuff: &7%strikepractice_elo_nodebuffelo%'
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+    column-2:
+      - ' ' # First slot of the second column
+      - '&7Ping: &f%strikepractice_ping% ms ping=%strikepractice_ping%'
+      - '&7In Fights: &f%strikepractice_in_fight%'
+      - ' '
+      - '&b&lYour Stats skin=%strikepractice_player%'
+      - '&6Kills: &7%strikepractice_kills%'
+      - '&6Deaths: &7%strikepractice_deaths%'
+      - '&6Elo Rank: &7%strikepractice_elo_rank%'
+      - '&6Event wins: &7%strikepractice_event_wins%'
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+    column-3:
+      - ' '
+      - '&7Ranked Queue: &f%strikepractice_in_ranked_queue%'
+      - '&7Unranked Queue: &f%strikepractice_in_unranked_queue%'
+      - ' '
+      - ' '
+      - '&6Rankeds left: &7%strikepractice_rankeds_left%'
+      - '&6Unrankeds left: &7%strikepractice_unrankeds_left%'
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
   in_match:
-    - 'In match'
-    - '%strikepractice_opponent%'
-    - '%strikepractice_opponent2% ping=200'
-  in_event:
-    - 'In event'
+    column-1:
+      - ' '
+      - '&7Online: &f%strikepractice_players%'
+      - ' '
+      - '&a&lTeammates'
+      - '&a%strikepractice_teammate1% skin=%strikepractice_teammate1%'
+      - '&a%strikepractice_teammate2% skin=%strikepractice_teammate2%'
+      - '&a%strikepractice_teammate3% skin=%strikepractice_teammate3%'
+      - '&a%strikepractice_teammate4% skin=%strikepractice_teammate4%'
+      - '&a%strikepractice_teammate5% skin=%strikepractice_teammate5%'
+      - '&a%strikepractice_teammate6% skin=%strikepractice_teammate6%'
+      - '&a%strikepractice_teammate7% skin=%strikepractice_teammate7%'
+      - '&a%strikepractice_teammate8% skin=%strikepractice_teammate8%'
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+    column-2:
+      - ' '
+      - '&6Ping: %strikepractice_ping% ms ping=%strikepractice_ping%'
+      - '&6Opponent Ping: %strikepractice_opponent_ping%'
+      - '&6Kit: %strikepractice_kit%'
+      - '&6Arena: %strikepractice_kit%'
+      - '&6Opponent Elo: %strikepractice_opponent_elo%'
+      - '&6Round: %strikepractice_round%/%strikepractice_total_rounds% [display=%strikepractice_is_bestof%]'
+      - '&6Wins: &a%strikepractice_own_wins% - &c%strikepractice_opponent_wins% [display=%strikepractice_is_bestof%]'
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+    column-3:
+      - ' '
+      - '&7Staff Online: &f%strikepractice_online_staff%'
+      - ' '
+      - '&c&lOpponent(s)'
+      - '&c%strikepractice_opponent1% skin=%strikepractice_opponent1%'
+      - '&c%strikepractice_opponent2% skin=%strikepractice_opponent2%'
+      - '&c%strikepractice_opponent3% skin=%strikepractice_opponent3%'
+      - '&c%strikepractice_opponent4% skin=%strikepractice_opponent4%'
+      - '&c%strikepractice_opponent5% skin=%strikepractice_opponent5%'
+      - '&c%strikepractice_opponent6% skin=%strikepractice_opponent6%'
+      - '&c%strikepractice_opponent7% skin=%strikepractice_opponent7%'
+      - '&c%strikepractice_opponent8% skin=%strikepractice_opponent8%'
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
+      - ' '
