Fix order, use different placeholders, more

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -88,14 +88,14 @@ slots:
       - '&7Online: &f%strikepractice_players%'
       - ' '
       - '&a&lTeammates'
-      - '&a%strikepractice_teammate1% skin=%strikepractice_teammate1%'
-      - '&a%strikepractice_teammate2% skin=%strikepractice_teammate2%'
-      - '&a%strikepractice_teammate3% skin=%strikepractice_teammate3%'
-      - '&a%strikepractice_teammate4% skin=%strikepractice_teammate4%'
-      - '&a%strikepractice_teammate5% skin=%strikepractice_teammate5%'
-      - '&a%strikepractice_teammate6% skin=%strikepractice_teammate6%'
-      - '&a%strikepractice_teammate7% skin=%strikepractice_teammate7%'
-      - '&a%strikepractice_teammate8% skin=%strikepractice_teammate8%'
+      - '&%strikepractice_teammate_colored1% skin=%strikepractice_teammate1%'
+      - '&%strikepractice_teammate_colored2% skin=%strikepractice_teammate2%'
+      - '&%strikepractice_teammate_colored3% skin=%strikepractice_teammate3%'
+      - '&%strikepractice_teammate_colored4% skin=%strikepractice_teammate4%'
+      - '&%strikepractice_teammate_colored5% skin=%strikepractice_teammate5%'
+      - '&%strikepractice_teammate_colored6% skin=%strikepractice_teammate6%'
+      - '&%strikepractice_teammate_colored7% skin=%strikepractice_teammate7%'
+      - '&%strikepractice_teammate_colored8% skin=%strikepractice_teammate8%'
       - ' '
       - ' '
       - ' '
@@ -112,7 +112,7 @@ slots:
       - '&6Arena: %strikepractice_kit%'
       - '&6Opponent Elo: %strikepractice_opponent_elo%'
       - '&6Round: %strikepractice_round%/%strikepractice_total_rounds% [display=%strikepractice_is_bestof%]'
-      - '&6Wins: &a%strikepractice_own_wins% - &c%strikepractice_opponent_wins% [display=%strikepractice_is_bestof%]'
+      - '&6Wins: &a%strikepractice_own_wins% - %strikepractice_opponent_colored_wins% [display=%strikepractice_is_bestof%]'
       - ' '
       - ' '
       - ' '
@@ -130,14 +130,14 @@ slots:
       - '&7Staff Online: &f%strikepractice_online_staff%'
       - ' '
       - '&c&lOpponent(s)'
-      - '&c%strikepractice_opponent1% skin=%strikepractice_opponent1%'
-      - '&c%strikepractice_opponent2% skin=%strikepractice_opponent2%'
-      - '&c%strikepractice_opponent3% skin=%strikepractice_opponent3%'
-      - '&c%strikepractice_opponent4% skin=%strikepractice_opponent4%'
-      - '&c%strikepractice_opponent5% skin=%strikepractice_opponent5%'
-      - '&c%strikepractice_opponent6% skin=%strikepractice_opponent6%'
-      - '&c%strikepractice_opponent7% skin=%strikepractice_opponent7%'
-      - '&c%strikepractice_opponent8% skin=%strikepractice_opponent8%'
+      - '%strikepractice_opponent_colored1% skin=%strikepractice_opponent1%'
+      - '%strikepractice_opponent_colored2% skin=%strikepractice_opponent2%'
+      - '%strikepractice_opponent_colored3% skin=%strikepractice_opponent3%'
+      - '%strikepractice_opponent_colored4% skin=%strikepractice_opponent4%'
+      - '%strikepractice_opponent_colored5% skin=%strikepractice_opponent5%'
+      - '%strikepractice_opponent_colored6% skin=%strikepractice_opponent6%'
+      - '%strikepractice_opponent_colored7% skin=%strikepractice_opponent7%'
+      - '%strikepractice_opponent_colored8% skin=%strikepractice_opponent8%'
       - ' '
       - ' '
       - ' '
