Some cleanup/refactoring, change default config

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -87,7 +87,7 @@ slots:
       - ' '
       - '&7Online: &f%strikepractice_players%'
       - ' '
-      - '&a&lTeammates'
+      - '&a&lYou'
       - '&%strikepractice_teammate_colored1% skin=%strikepractice_teammate1%'
       - '&%strikepractice_teammate_colored2% skin=%strikepractice_teammate2%'
       - '&%strikepractice_teammate_colored3% skin=%strikepractice_teammate3%'
@@ -106,10 +106,10 @@ slots:
       - ' '
     column-2:
       - ' '
-      - '&6Ping: %strikepractice_ping% ms ping=%strikepractice_ping%'
-      - '&6Opponent Ping: %strikepractice_opponent_ping%'
+      - '&7Ping: &e%strikepractice_ping% ms ping=%strikepractice_ping%'
+      - '&7Opponent &ePing: %strikepractice_opponent_ping%'
       - '&6Kit: %strikepractice_kit%'
-      - '&6Arena: %strikepractice_kit%'
+      - '&6Arena: %strikepractice_arena%'
       - '&6Opponent Elo: %strikepractice_opponent_elo%'
       - '&6Round: %strikepractice_round%/%strikepractice_total_rounds% [display=%strikepractice_is_bestof%]'
       - '&6Wins: &a%strikepractice_own_wins% - %strikepractice_opponent_colored_wins% [display=%strikepractice_is_bestof%]'
