Allow null header/footer

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,7 @@
 tablist:
   update-ticks: 100
   columns: 4
+# Comment out to remove the header/footer
 header: '&b&lStrikeTab &7&l- &3&lTablist Addon'
 footer: '&7Contact Toppe#4670 for StrikeTab'
 # Used to sort players in tab
