Header and footer now support multiple lines

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,10 +1,13 @@
 tablist:
   update-ticks: 100
   columns: 4
-# Use '' to disable, for example:
-# header: ''
-header: '&b&lStrikeTab &7&l- &3&lTablist Addon'
-footer: '&7Contact Toppe#4670 for StrikeTab'
+# Header and footer now support multiple lines
+# Use [] to disable, for example:
+# header: []
+header:
+  - '&b&lStrikeTab &7&l- &3&lTablist Addon'
+footer:
+  - '&7Contact Toppe#4670 for StrikeTab'
 # Used to sort players in tab
 sort-ranks:
   admin:
