Fixed default config

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -93,14 +93,14 @@ slots:
       - '&7Online: &f%strikepractice_players%'
       - ' '
       - '&a&lYou'
-      - '&%strikepractice_teammate_colored1% skin=%strikepractice_teammate1%'
-      - '&%strikepractice_teammate_colored2% skin=%strikepractice_teammate2%'
-      - '&%strikepractice_teammate_colored3% skin=%strikepractice_teammate3%'
-      - '&%strikepractice_teammate_colored4% skin=%strikepractice_teammate4%'
-      - '&%strikepractice_teammate_colored5% skin=%strikepractice_teammate5%'
-      - '&%strikepractice_teammate_colored6% skin=%strikepractice_teammate6%'
-      - '&%strikepractice_teammate_colored7% skin=%strikepractice_teammate7%'
-      - '&%strikepractice_teammate_colored8% skin=%strikepractice_teammate8%'
+      - '%strikepractice_teammate_colored1% skin=%strikepractice_teammate1%'
+      - '%strikepractice_teammate_colored2% skin=%strikepractice_teammate2%'
+      - '%strikepractice_teammate_colored3% skin=%strikepractice_teammate3%'
+      - '%strikepractice_teammate_colored4% skin=%strikepractice_teammate4%'
+      - '%strikepractice_teammate_colored5% skin=%strikepractice_teammate5%'
+      - '%strikepractice_teammate_colored6% skin=%strikepractice_teammate6%'
+      - '%strikepractice_teammate_colored7% skin=%strikepractice_teammate7%'
+      - '%strikepractice_teammate_colored8% skin=%strikepractice_teammate8%'
       - ' '
       - ' '
       - ' '
