--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,7 @@ main: ga.strikepractice.striketab.StrikeTab
 version: 0.2.0
 name: StrikeTab
 author: Toppe5
+description: Tablist addon for StrikePractice
 depend: [StrikePractice, PlaceholderAPI, ProtocolLib]
 softdepend: [Citizens]
 commands:
