--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,10 +5,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-java@v1
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
         with:
-          java-version: 8
+          distribution: 'temurin'
+          java-version: '8.x'
       - name: "./gradlew build"
         uses: eskatos/gradle-command-action@v1
         with:
@@ -17,7 +18,7 @@ jobs:
           CI: true
       - name: Publish test report
         if: always()
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v4
         with:
           name: test-report
           path: build/reports/tests/test/index.html
